...
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:contentInsetStart="72dp"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/left_arrow">

                <android.support.design.widget.TabLayout
                    android:id="@+id/tab_layout"
                    style="@style/Widget.Design.TabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:background="@color/primary"
                    app:tabSelectedTextColor="#FFF" />

...
